samples/_failures_safe/1761040215_b8b9fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3fe6ac8.c: In function ‘main’:
./samples/SAFE/__tmp_e3fe6ac8.c:142:9: error: expected declaration or statement at end of input
  142 |         print_buffer_hex(&compressed);
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e3fe6ac8.c:142:9: error: expected declaration or statement at end of input
